--- a/tasks.org
+++ b/tasks.org
@@ -4,27 +4,28 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-02-01 周三 22:12]
-| Headline                                   | Time       |          |
-|--------------------------------------------+------------+----------|
-| *Total time*                               | *3d 15:41* |          |
-|--------------------------------------------+------------+----------|
-| BOOK                                       | 3d 11:58   |          |
-| \_  TODO [#A] CPPP[63%]                    |            | 1d 13:24 |
-| \_  TODO [#A] OpenGL Programming Guide[8%] |            |     2:56 |
-| \_  TODO [#A] Unity 权威讲解[33%]          |            |     6:52 |
-| \_  TODO [#B] 游戏编程算法与技巧[7%]       |            |     1:03 |
-| \_  TODO [#B] Mathematics of 3D Game...    |            |     0:54 |
-| \_  TODO [#B] Game Coding Complete[50%]    |            |  1d 7:57 |
-| \_  TODO [#B] GEA[0%]                      |            |     0:27 |
-| \_  TODO [#C] 程序员的自我修养             |            |     0:04 |
-| \_  TODO [#C] Game Programming Patterns    |            |     0:59 |
-| \_  TODO [#C] Windows 程序设计             |            |     1:22 |
-| Things                                     | 3:43       |          |
-| \_  TODO learn 1openGL                     |            |     3:43 |
+#+CAPTION: Clock summary at [2017-02-06 周一 17:25]
+| Headline                                   | Time       |         |
+|--------------------------------------------+------------+---------|
+| *Total time*                               | *4d 17:30* |         |
+|--------------------------------------------+------------+---------|
+| BOOK                                       | 4d 5:39    |         |
+| \_  TODO [#A] CPPP[78%]                    |            | 2d 4:22 |
+| \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
+| \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
+| \_  TODO [#A] 数据库系统概念[16%]          |            |    2:43 |
+| \_  TODO [#B] 游戏编程算法与技巧[7%]       |            |    1:03 |
+| \_  TODO [#B] Mathematics of 3D Game...    |            |    0:54 |
+| \_  TODO [#B] Game Coding Complete[50%]    |            | 1d 7:57 |
+| \_  TODO [#B] GEA[0%]                      |            |    0:27 |
+| \_  TODO [#C] 程序员的自我修养             |            |    0:04 |
+| \_  TODO [#C] Game Programming Patterns    |            |    0:59 |
+| \_  TODO [#C] Windows 程序设计             |            |    1:22 |
+| Things                                     | 11:51      |         |
+| \_  TODO Learn OpenGL                      |            |   11:51 |
 #+END:
 * BOOK                                                               :@book:
-** TODO [#A] CPPP[63%]
+** TODO [#A] CPPP[78%]
    - [X] 开始
    - [X] 变量和基本类型
    - [X] 字符串，向量和数组
@@ -37,14 +38,34 @@
    - [X] 泛型算法
    - [X] 关联容器
    - [X] 动态内存
-   - [ ] 拷贝控制
-   - [ ] 重载运算与类型转换
-   - [ ] 面向对象程序设计
+   - [X] 拷贝控制
+   - [X] 重载运算与类型转换
+   - [X] 面向对象程序设计
    - [ ] 模版与泛型编程
    - [ ] 标准库特殊设施
    - [ ] 用于大型程序的工具
    - [ ] 特殊工具与技术
    :LOGBOOK:
+   CLOCK: [2017-02-06 周一 20:01]--[2017-02-06 周一 20:06] =>  0:05
+   CLOCK: [2017-02-06 周一 16:04]--[2017-02-06 周一 17:25] =>  1:21
+   CLOCK: [2017-02-06 周一 14:06]--[2017-02-06 周一 14:07] =>  0:01
+   CLOCK: [2017-02-06 周一 12:40]--[2017-02-06 周一 13:59] =>  1:19
+   CLOCK: [2017-02-06 周一 11:00]--[2017-02-06 周一 12:21] =>  1:21
+   CLOCK: [2017-02-05 周日 17:28]--[2017-02-05 周日 18:03] =>  0:35
+   CLOCK: [2017-02-05 周日 16:25]--[2017-02-05 周日 17:21] =>  0:56
+   CLOCK: [2017-02-05 周日 14:46]--[2017-02-05 周日 15:36] =>  0:50
+   CLOCK: [2017-02-05 周日 14:27]--[2017-02-05 周日 14:38] =>  0:11
+   CLOCK: [2017-02-05 周日 11:42]--[2017-02-05 周日 13:04] =>  1:22
+   CLOCK: [2017-02-05 周日 10:51]--[2017-02-05 周日 11:37] =>  0:46
+   CLOCK: [2017-02-04 周六 15:06]--[2017-02-04 周六 15:49] =>  0:43
+   CLOCK: [2017-02-04 周六 10:48]--[2017-02-04 周六 12:12] =>  1:24
+   CLOCK: [2017-02-03 周五 22:07]--[2017-02-03 周五 22:40] =>  0:33
+   CLOCK: [2017-02-03 周五 21:09]--[2017-02-03 周五 21:49] =>  0:40
+   CLOCK: [2017-02-03 周五 20:11]--[2017-02-03 周五 20:56] =>  0:45
+   CLOCK: [2017-02-02 周四 21:15]--[2017-02-02 周四 21:35] =>  0:20
+   CLOCK: [2017-02-02 周四 20:14]--[2017-02-02 周四 20:52] =>  0:38
+   CLOCK: [2017-02-02 周四 16:39]--[2017-02-02 周四 17:15] =>  0:36
+   CLOCK: [2017-02-02 周四 12:35]--[2017-02-02 周四 13:12] =>  0:37
    CLOCK: [2017-02-01 周三 20:56]--[2017-02-01 周三 22:11] =>  1:15
    CLOCK: [2017-02-01 周三 19:45]--[2017-02-01 周三 20:33] =>  0:48
    CLOCK: [2017-02-01 周三 17:07]--[2017-02-01 周三 17:58] =>  0:51
@@ -150,12 +171,12 @@
    CLOCK: [2017-01-17 周二 23:29]--[2017-01-17 周二 23:46] =>  0:17
    :END:
 ** TODO [#A] 程序员修炼之道
-** TODO [#A] 数据库系统概念[3%]
+** TODO [#A] 数据库系统概念[16%]
    - [X] 引言
-   - [ ] 关系模型介绍
-   - [ ] SQL
-   - [ ] 中级 SQL
-   - [ ] 高级 SQL
+   - [X] 关系模型介绍
+   - [X] SQL
+   - [X] 中级 SQL
+   - [X] 高级 SQL
    - [ ] 形式化关系查询语言
    - [ ] 数据库设计和 E-R 模型
    - [ ] 关系数据库设计
@@ -182,6 +203,11 @@
    - [ ] IBＭ　DB2
    - [ ] SQL Server
    :LOGBOOK:
+   CLOCK: [2017-02-05 周日 22:05]--[2017-02-05 周日 22:20] =>  0:15
+   CLOCK: [2017-02-05 周日 20:53]--[2017-02-05 周日 21:44] =>  0:51
+   CLOCK: [2017-02-03 周五 23:40]--[2017-02-03 周五 23:46] =>  0:06
+   CLOCK: [2017-02-03 周五 22:55]--[2017-02-03 周五 23:30] =>  0:35
+   CLOCK: [2017-02-02 周四 22:08]--[2017-02-02 周四 22:24] =>  0:16
    CLOCK: [2017-02-01 周三 22:26]--[2017-02-01 周三 23:06] =>  0:40
    :END:
 ** TODO [#B] 游戏编程算法与技巧[7%]
@@ -357,8 +383,19 @@
 * Homework
 * Things
 ** TODO Blog
-** TODO learn 1openGL 
+** TODO Learn OpenGL 
    :LOGBOOK:
+   CLOCK: [2017-02-06 周一 20:07]--[2017-02-06 周一 20:33] =>  0:26
+   CLOCK: [2017-02-05 周日 23:07]--[2017-02-05 周日 23:58] =>  0:51
+   CLOCK: [2017-02-05 周日 22:22]--[2017-02-05 周日 22:32] =>  0:10
+   CLOCK: [2017-02-04 周六 20:31]--[2017-02-04 周六 21:07] =>  0:36
+   CLOCK: [2017-02-04 周六 19:43]--[2017-02-04 周六 20:22] =>  0:39
+   CLOCK: [2017-02-04 周六 18:33]--[2017-02-04 周六 19:14] =>  0:41
+   CLOCK: [2017-02-04 周六 17:37]--[2017-02-04 周六 18:04] =>  0:27
+   CLOCK: [2017-02-03 周五 14:50]--[2017-02-03 周五 16:15] =>  1:25
+   CLOCK: [2017-02-03 周五 11:18]--[2017-02-03 周五 13:08] =>  1:50
+   CLOCK: [2017-02-02 周四 10:25]--[2017-02-02 周四 11:19] =>  0:54
+   CLOCK: [2017-02-02 周四 09:23]--[2017-02-02 周四 09:58] =>  0:35
    CLOCK: [2017-02-01 周三 15:34]--[2017-02-01 周三 15:56] =>  0:22
    CLOCK: [2017-02-01 周三 14:17]--[2017-02-01 周三 14:42] =>  0:25
    CLOCK: [2017-01-31 周二 14:08]--[2017-01-31 周二 14:17] =>  0:09
