--- a/tasks.org
+++ b/tasks.org
@@ -4,13 +4,12 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-02-06 周一 17:25]
+#+CAPTION: Clock summary at [2017-02-08 周三 21:06]
 | Headline                                   | Time       |         |
 |--------------------------------------------+------------+---------|
-| *Total time*                               | *4d 17:30* |         |
+| *Total time*                               | *2d 13:34* |         |
 |--------------------------------------------+------------+---------|
-| BOOK                                       | 4d 5:39    |         |
-| \_  TODO [#A] CPPP[78%]                    |            | 2d 4:22 |
+| BOOK                                       | 2d 1:17    |         |
 | \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
 | \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
 | \_  TODO [#A] 数据库系统概念[16%]          |            |    2:43 |
@@ -21,107 +20,10 @@
 | \_  TODO [#C] 程序员的自我修养             |            |    0:04 |
 | \_  TODO [#C] Game Programming Patterns    |            |    0:59 |
 | \_  TODO [#C] Windows 程序设计             |            |    1:22 |
-| Things                                     | 11:51      |         |
-| \_  TODO Learn OpenGL                      |            |   11:51 |
+| Things                                     | 12:17      |         |
+| \_  TODO Learn OpenGL                      |            |   12:17 |
 #+END:
 * BOOK                                                               :@book:
-** TODO [#A] CPPP[78%]
-   - [X] 开始
-   - [X] 变量和基本类型
-   - [X] 字符串，向量和数组
-   - [X] 表达式
-   - [X] 语句
-   - [X] 函数
-   - [X] 类
-   - [X] IO 库
-   - [X] 顺序容器
-   - [X] 泛型算法
-   - [X] 关联容器
-   - [X] 动态内存
-   - [X] 拷贝控制
-   - [X] 重载运算与类型转换
-   - [X] 面向对象程序设计
-   - [ ] 模版与泛型编程
-   - [ ] 标准库特殊设施
-   - [ ] 用于大型程序的工具
-   - [ ] 特殊工具与技术
-   :LOGBOOK:
-   CLOCK: [2017-02-06 周一 20:01]--[2017-02-06 周一 20:06] =>  0:05
-   CLOCK: [2017-02-06 周一 16:04]--[2017-02-06 周一 17:25] =>  1:21
-   CLOCK: [2017-02-06 周一 14:06]--[2017-02-06 周一 14:07] =>  0:01
-   CLOCK: [2017-02-06 周一 12:40]--[2017-02-06 周一 13:59] =>  1:19
-   CLOCK: [2017-02-06 周一 11:00]--[2017-02-06 周一 12:21] =>  1:21
-   CLOCK: [2017-02-05 周日 17:28]--[2017-02-05 周日 18:03] =>  0:35
-   CLOCK: [2017-02-05 周日 16:25]--[2017-02-05 周日 17:21] =>  0:56
-   CLOCK: [2017-02-05 周日 14:46]--[2017-02-05 周日 15:36] =>  0:50
-   CLOCK: [2017-02-05 周日 14:27]--[2017-02-05 周日 14:38] =>  0:11
-   CLOCK: [2017-02-05 周日 11:42]--[2017-02-05 周日 13:04] =>  1:22
-   CLOCK: [2017-02-05 周日 10:51]--[2017-02-05 周日 11:37] =>  0:46
-   CLOCK: [2017-02-04 周六 15:06]--[2017-02-04 周六 15:49] =>  0:43
-   CLOCK: [2017-02-04 周六 10:48]--[2017-02-04 周六 12:12] =>  1:24
-   CLOCK: [2017-02-03 周五 22:07]--[2017-02-03 周五 22:40] =>  0:33
-   CLOCK: [2017-02-03 周五 21:09]--[2017-02-03 周五 21:49] =>  0:40
-   CLOCK: [2017-02-03 周五 20:11]--[2017-02-03 周五 20:56] =>  0:45
-   CLOCK: [2017-02-02 周四 21:15]--[2017-02-02 周四 21:35] =>  0:20
-   CLOCK: [2017-02-02 周四 20:14]--[2017-02-02 周四 20:52] =>  0:38
-   CLOCK: [2017-02-02 周四 16:39]--[2017-02-02 周四 17:15] =>  0:36
-   CLOCK: [2017-02-02 周四 12:35]--[2017-02-02 周四 13:12] =>  0:37
-   CLOCK: [2017-02-01 周三 20:56]--[2017-02-01 周三 22:11] =>  1:15
-   CLOCK: [2017-02-01 周三 19:45]--[2017-02-01 周三 20:33] =>  0:48
-   CLOCK: [2017-02-01 周三 17:07]--[2017-02-01 周三 17:58] =>  0:51
-   CLOCK: [2017-02-01 周三 16:06]--[2017-02-01 周三 16:55] =>  0:49
-   CLOCK: [2017-02-01 周三 00:20]--[2017-02-01 周三 00:49] =>  0:29
-   CLOCK: [2017-01-31 周二 23:46]--[2017-02-01 周三 00:05] =>  0:19
-   CLOCK: [2017-01-31 周二 23:00]--[2017-01-31 周二 23:36] =>  0:36
-   CLOCK: [2017-01-31 周二 22:12]--[2017-01-31 周二 22:51] =>  0:39
-   CLOCK: [2017-01-31 周二 21:12]--[2017-01-31 周二 21:55] =>  0:43
-   CLOCK: [2017-01-31 周二 19:28]--[2017-01-31 周二 20:17] =>  0:49
-   CLOCK: [2017-01-31 周二 19:07]--[2017-01-31 周二 19:26] =>  0:19
-   CLOCK: [2017-01-31 周二 17:50]--[2017-01-31 周二 17:57] =>  0:07
-   CLOCK: [2017-01-31 周二 16:46]--[2017-01-31 周二 17:40] =>  0:54
-   CLOCK: [2017-01-31 周二 16:34]--[2017-01-31 周二 16:43] =>  0:09
-   CLOCK: [2017-01-30 周一 16:12]--[2017-01-30 周一 17:18] =>  1:06
-   CLOCK: [2017-01-30 周一 15:00]--[2017-01-30 周一 15:40] =>  0:40
-   CLOCK: [2017-01-30 周一 12:30]--[2017-01-30 周一 14:59] =>  2:29
-   CLOCK: [2017-01-29 周日 23:40]--[2017-01-29 周日 23:54] =>  0:14
-   CLOCK: [2017-01-29 周日 22:45]--[2017-01-29 周日 23:33] =>  0:48
-   CLOCK: [2017-01-29 周日 21:15]--[2017-01-29 周日 22:40] =>  1:25
-   CLOCK: [2017-01-29 周日 19:39]--[2017-01-29 周日 20:25] =>  0:46
-   CLOCK: [2017-01-29 周日 19:08]--[2017-01-29 周日 19:27] =>  0:19
-   CLOCK: [2017-01-29 周日 18:41]--[2017-01-29 周日 18:53] =>  0:12
-   CLOCK: [2017-01-28 周六 21:03]--[2017-01-28 周六 22:28] =>  1:25
-   CLOCK: [2017-01-28 周六 18:15]--[2017-01-28 周六 19:06] =>  0:51
-   CLOCK: [2017-01-28 周六 16:52]--[2017-01-28 周六 18:08] =>  1:16
-   CLOCK: [2017-01-26 周四 16:16]--[2017-01-26 周四 16:56] =>  0:40
-   CLOCK: [2017-01-21 周六 16:12]--[2017-01-21 周六 17:12] =>  1:00
-   CLOCK: [2017-01-21 周六 14:36]--[2017-01-21 周六 14:53] =>  0:17
-   CLOCK: [2017-01-21 周六 12:47]--[2017-01-21 周六 13:41] =>  0:54
-   CLOCK: [2017-01-21 周六 11:44]--[2017-01-21 周六 12:41] =>  0:57
-   CLOCK: [2017-01-21 周六 10:38]--[2017-01-21 周六 11:22] =>  0:44
-   CLOCK: [2017-01-20 周五 15:47]--[2017-01-20 周五 17:15] =>  1:28
-   CLOCK: [2017-01-20 周五 14:45]--[2017-01-20 周五 15:40] =>  0:55
-   CLOCK: [2017-01-20 周五 13:56]--[2017-01-20 周五 14:35] =>  0:39
-   CLOCK: [2017-01-20 周五 11:48]--[2017-01-20 周五 12:15] =>  0:27
-   CLOCK: [2017-01-20 周五 10:37]--[2017-01-20 周五 11:39] =>  1:02
-   CLOCK: [2017-01-19 周四 22:58]--[2017-01-19 周四 23:20] =>  0:22
-   CLOCK: [2017-01-19 周四 22:10]--[2017-01-19 周四 22:53] =>  0:43
-   CLOCK: [2017-01-19 周四 21:36]--[2017-01-19 周四 22:02] =>  0:26
-   CLOCK: [2017-01-19 周四 21:18]--[2017-01-19 周四 21:30] =>  0:12
-   CLOCK: [2017-01-19 周四 20:07]--[2017-01-19 周四 21:01] =>  0:54
-   CLOCK: [2017-01-19 周四 19:19]--[2017-01-19 周四 19:58] =>  0:39
-   CLOCK: [2017-01-19 周四 17:02]--[2017-01-19 周四 17:45] =>  0:43
-   CLOCK: [2017-01-19 周四 14:35]--[2017-01-19 周四 14:40] =>  0:05
-   CLOCK: [2017-01-19 周四 14:20]--[2017-01-19 周四 14:34] =>  0:14
-   CLOCK: [2017-01-19 周四 12:44]--[2017-01-19 周四 13:05] =>  0:21
-   CLOCK: [2017-01-19 四 04:38]--[2017-01-19 四 05:12] =>  0:34
-   CLOCK: [2017-01-19 四 03:56]--[2017-01-19 四 04:24] =>  0:28
-   CLOCK: [2017-01-19 四 01:45]--[2017-01-19 四 02:17] =>  0:32
-   CLOCK: [2017-01-19 四 00:36]--[2017-01-19 四 01:20] =>  0:44
-   CLOCK: [2017-01-19 四 00:33]--[2017-01-19 四 00:36] =>  0:03
-   CLOCK: [2017-01-19 四 00:05]--[2017-01-19 四 00:13] =>  0:08
-   CLOCK: [2017-01-18 三 23:49]--[2017-01-19 四 00:05] =>  0:16
-   CLOCK: [2017-01-18 三 22:33]--[2017-01-18 三 23:12] =>  0:39
-   :END:
 ** TODO [#A] CLRS
 ** TODO [#A] OpenGL Programming Guide[8%]
    - [X] Introduction to OpenGL
@@ -380,6 +282,22 @@
    CLOCK: [2016-12-19 周一 12:01]--[2016-12-19 周一 12:07] =>  0:06
    :END:
 ** TODO [#C] Multiplayer Game Programming
+** TODO [#B] 面向对象的游戏开发[18%]
+   - [X] 简介
+   - [X] 游戏开发过程
+   - [ ] 游戏开发中的软件工程
+   - [ ] 游戏中的面向对象设计
+   - [ ] 游戏开发的组件模型
+   - [ ] 跨平台游戏开发
+   - [ ] 游戏对象
+   - [ ] 设计驱动的控制
+   - [ ] 迭代开发策略
+   - [ ] 游戏职责分工
+   - [ ] 案例分析
+   :LOGBOOK:
+   CLOCK: [2017-02-08 周三 22:51]--[2017-02-08 周三 23:27] =>  0:36
+   CLOCK: [2017-02-08 周三 22:32]--[2017-02-08 周三 22:51] =>  0:19
+   :END:
 * Homework
 * Things
 ** TODO Blog
