--- a/plan.org
+++ b/plan.org
@@ -23,7 +23,7 @@
 ******* C
         - [ ] TCPL
 ******* C++
-        - [ ] CPPP
+        - [X] CPPP
 ******** C++ Standard Library
          - [ ] The C++ Standard Library 2nd Ed
          - [ ] Effective STL
@@ -185,6 +185,8 @@
    - [X] 软件开发者路线图
    - [ ] 程序员修炼之道
    - [ ] 数据库系统概念
+   - [ ] C++语言的设计和演化
+   - [ ] 大规模 C++程序设计
 * Language
 
 b
