--- a/tasks.org
+++ b/tasks.org
@@ -4,12 +4,12 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-02-08 周三 21:06]
+#+CAPTION: Clock summary at [2017-02-09 周四 12:16]
 | Headline                                   | Time       |         |
 |--------------------------------------------+------------+---------|
-| *Total time*                               | *2d 13:34* |         |
+| *Total time*                               | *2d 16:30* |         |
 |--------------------------------------------+------------+---------|
-| BOOK                                       | 2d 1:17    |         |
+| BOOK                                       | 2d 4:13    |         |
 | \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
 | \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
 | \_  TODO [#A] 数据库系统概念[16%]          |            |    2:43 |
@@ -20,6 +20,8 @@
 | \_  TODO [#C] 程序员的自我修养             |            |    0:04 |
 | \_  TODO [#C] Game Programming Patterns    |            |    0:59 |
 | \_  TODO [#C] Windows 程序设计             |            |    1:22 |
+| \_  TODO [#B] 面向对象的游戏开发[18%]      |            |    0:55 |
+| \_  TODO [#A] c++语言的设计及演化          |            |    2:01 |
 | Things                                     | 12:17      |         |
 | \_  TODO Learn OpenGL                      |            |   12:17 |
 #+END:
@@ -297,6 +299,12 @@
    :LOGBOOK:
    CLOCK: [2017-02-08 周三 22:51]--[2017-02-08 周三 23:27] =>  0:36
    CLOCK: [2017-02-08 周三 22:32]--[2017-02-08 周三 22:51] =>  0:19
+   :END:
+** TODO [#A] c++语言的设计及演化
+   :LOGBOOK:
+   CLOCK: [2017-02-09 周四 12:03]--[2017-02-09 周四 12:16] =>  0:13
+   CLOCK: [2017-02-09 周四 10:49]--[2017-02-09 周四 11:49] =>  1:00
+   CLOCK: [2017-02-09 周四 09:40]--[2017-02-09 周四 10:28] =>  0:48
    :END:
 * Homework
 * Things
