--- a/tasks.org
+++ b/tasks.org
@@ -4,26 +4,36 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-02-09 周四 12:16]
+#+CAPTION: Clock summary at [2017-02-26 周日 00:57]
 | Headline                                   | Time       |         |
 |--------------------------------------------+------------+---------|
-| *Total time*                               | *2d 16:30* |         |
+| *Total time*                               | *3d 11:10* |         |
 |--------------------------------------------+------------+---------|
-| BOOK                                       | 2d 4:13    |         |
+| BOOK                                       | 3d 11:10   |         |
 | \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
 | \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
-| \_  TODO [#A] 数据库系统概念[16%]          |            |    2:43 |
+| \_  TODO [#A] 数据库系统概念[16%]          |            |    4:49 |
 | \_  TODO [#B] 游戏编程算法与技巧[7%]       |            |    1:03 |
 | \_  TODO [#B] Mathematics of 3D Game...    |            |    0:54 |
 | \_  TODO [#B] Game Coding Complete[50%]    |            | 1d 7:57 |
 | \_  TODO [#B] GEA[0%]                      |            |    0:27 |
-| \_  TODO [#C] 程序员的自我修养             |            |    0:04 |
+| \_  TODO [#C] 程序员的自我修养[15%]        |            |    1:06 |
 | \_  TODO [#C] Game Programming Patterns    |            |    0:59 |
 | \_  TODO [#C] Windows 程序设计             |            |    1:22 |
-| \_  TODO [#B] 面向对象的游戏开发[18%]      |            |    0:55 |
-| \_  TODO [#A] c++语言的设计及演化          |            |    2:01 |
-| Things                                     | 12:17      |         |
-| \_  TODO Learn OpenGL                      |            |   12:17 |
+| \_  TODO [#B] 面向对象的游戏开发[27%]      |            |    2:37 |
+| \_  TODO [#A] C++语言的设计及演化          |            |    2:01 |
+| \_  TODO [#A] C++ Templates[70%]           |            |   11:21 |
+| \_  TODO [#A] 深度探索 C++对象模型[14%]    |            |    1:28 |
+| \_  TODO [#A] C++标准库[21%]               |            |    5:05 |
+| \_  TODO [#B] 代码大全 2[5%]               |            |    0:36 |
+| \_  TODO [#C] C++模板元编程[8%]            |            |    0:15 |
+| \_  TODO [#B] 面向对象分析与设计[0%]       |            |    0:45 |
+| \_  TODO [#B] 编程原本[8%]                 |            |    1:00 |
+| \_  TODO [#A] 算法[0%]                     |            |    1:42 |
+| \_  TODO [#B] Effective STL[12%]           |            |    2:16 |
+| \_  TODO [#A] 泛型编程与 STL[0%]           |            |    0:27 |
+| \_  TODO [#A] 第一行代码[0%]               |            |    0:19 |
+| \_  TODO [#B] STL 源码剖析[0%]             |            |    0:53 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#A] CLRS
@@ -107,6 +117,9 @@
    - [ ] IBＭ　DB2
    - [ ] SQL Server
    :LOGBOOK:
+   CLOCK: [2017-02-20 周一 17:39]--[2017-02-20 周一 18:28] =>  0:49
+   CLOCK: [2017-02-20 周一 16:48]--[2017-02-20 周一 17:29] =>  0:41
+   CLOCK: [2017-02-20 周一 15:53]--[2017-02-20 周一 16:29] =>  0:36
    CLOCK: [2017-02-05 周日 22:05]--[2017-02-05 周日 22:20] =>  0:15
    CLOCK: [2017-02-05 周日 20:53]--[2017-02-05 周日 21:44] =>  0:51
    CLOCK: [2017-02-03 周五 23:40]--[2017-02-03 周五 23:46] =>  0:06
@@ -246,10 +259,25 @@
    :LOGBOOK:
    CLOCK: [2017-01-06 周五 15:55]--[2017-01-06 周五 16:22] =>  0:27
    :END:
-** TODO [#C] 程序员的自我修养
+** TODO [#C] 程序员的自我修养[15%]
+   - [X] 温故而知新
+   - [X] 编译和链接
+   - [ ] 目标文件里有什么
+   - [ ] 静态链接
+   - [ ] Windows PE/COFF
+   - [ ] 可执行文件的装载与进程
+   - [ ] 动态链接
+   - [ ] Linux 共享库的组织
+   - [ ] Windows 下的动态链接
+   - [ ] 内存
+   - [ ] 运行库
+   - [ ] 系统调用与 API
+   - [ ] 运行库实现
    :LOGBOOK:
+   CLOCK: [2017-02-23 周四 21:21]--[2017-02-23 周四 21:40] =>  0:19
+   CLOCK: [2017-02-22 周三 23:53]--[2017-02-23 周四 00:36] =>  0:43
    CLOCK: [2017-01-04 周三 16:09]--[2017-01-04 周三 16:13] =>  0:04
-   :END:
+   :END: 
 ** TODO [#C] Game Programming Patterns
    :LOGBOOK:
    CLOCK: [2017-01-05 周四 22:25]--[2017-01-05 周四 23:24] =>  0:59
@@ -284,10 +312,10 @@
    CLOCK: [2016-12-19 周一 12:01]--[2016-12-19 周一 12:07] =>  0:06
    :END:
 ** TODO [#C] Multiplayer Game Programming
-** TODO [#B] 面向对象的游戏开发[18%]
+** TODO [#B] 面向对象的游戏开发[27%]
    - [X] 简介
    - [X] 游戏开发过程
-   - [ ] 游戏开发中的软件工程
+   - [X] 游戏开发中的软件工程
    - [ ] 游戏中的面向对象设计
    - [ ] 游戏开发的组件模型
    - [ ] 跨平台游戏开发
@@ -297,38 +325,346 @@
    - [ ] 游戏职责分工
    - [ ] 案例分析
    :LOGBOOK:
+   CLOCK: [2017-02-10 周五 16:51]--[2017-02-10 周五 17:17] =>  0:26
+   CLOCK: [2017-02-10 周五 13:27]--[2017-02-10 周五 13:49] =>  0:22
+   CLOCK: [2017-02-10 周五 13:08]--[2017-02-10 周五 13:12] =>  0:04
+   CLOCK: [2017-02-09 周四 21:20]--[2017-02-09 周四 22:10] =>  0:50
    CLOCK: [2017-02-08 周三 22:51]--[2017-02-08 周三 23:27] =>  0:36
    CLOCK: [2017-02-08 周三 22:32]--[2017-02-08 周三 22:51] =>  0:19
    :END:
-** TODO [#A] c++语言的设计及演化
+** TODO [#A] C++语言的设计及演化
    :LOGBOOK:
    CLOCK: [2017-02-09 周四 12:03]--[2017-02-09 周四 12:16] =>  0:13
    CLOCK: [2017-02-09 周四 10:49]--[2017-02-09 周四 11:49] =>  1:00
    CLOCK: [2017-02-09 周四 09:40]--[2017-02-09 周四 10:28] =>  0:48
    :END:
+** TODO [#A] C++ Templates[70%] 
+   - [X] 关于本章
+   - [X] 函数模版
+   - [X] 类模版
+   - [X] 非类型 模版参数
+   - [X] 技巧性基础知识
+   - [X] 模版实战
+   - [X] 模版术语
+   - [X] 深入模版基础
+   - [X] 模版中的名称
+   - [X] 实例化
+   - [X] 模板实参演绎
+   - [X] 特化与重载
+   - [X] 未来的方向
+   - [X] 模版的多态威力
+   - [X] trait 与 policy 类
+   - [X] 模版与继承
+   - [X] mateprogram
+   - [ ] 表示式模板
+   - [ ] 类型区分
+   - [ ] 智能指针
+   - [ ] tuple
+   - [ ] 函数对象和回调
+   - [ ] 一处定义原则
+   - [ ] 重载解析
+   :LOGBOOK:
+   CLOCK: [2017-02-23 周四 11:14]--[2017-02-23 周四 12:15] =>  1:01
+   CLOCK: [2017-02-23 周四 10:36]--[2017-02-23 周四 11:01] =>  0:25
+   CLOCK: [2017-02-22 周三 17:46]--[2017-02-22 周三 18:16] =>  0:30
+   CLOCK: [2017-02-22 周三 16:53]--[2017-02-22 周三 17:36] =>  0:43
+   CLOCK: [2017-02-22 周三 16:22]--[2017-02-22 周三 16:47] =>  0:25
+   CLOCK: [2017-02-22 周三 01:50]--[2017-02-22 周三 01:58] =>  0:08
+   CLOCK: [2017-02-22 周三 01:31]--[2017-02-22 周三 01:50] =>  0:19
+   CLOCK: [2017-02-21 周二 21:45]--[2017-02-21 周二 22:50] =>  1:05
+   CLOCK: [2017-02-21 周二 18:19]--[2017-02-21 周二 19:02] =>  0:43
+   CLOCK: [2017-02-21 周二 17:22]--[2017-02-21 周二 18:08] =>  0:46
+   CLOCK: [2017-02-21 周二 17:17]--[2017-02-21 周二 17:21] =>  0:04
+   CLOCK: [2017-02-21 周二 16:13]--[2017-02-21 周二 17:00] =>  0:47
+   CLOCK: [2017-02-20 周一 22:02]--[2017-02-20 周一 22:44] =>  0:42
+   CLOCK: [2017-02-19 周日 22:43]--[2017-02-19 周日 23:44] =>  1:01
+   CLOCK: [2017-02-11 周六 20:19]--[2017-02-11 周六 21:50] =>  1:31
+   CLOCK: [2017-02-10 周五 12:17]--[2017-02-10 周五 12:30] =>  0:13
+   CLOCK: [2017-02-10 周五 11:20]--[2017-02-10 周五 12:03] =>  0:43
+   CLOCK: [2017-02-09 周四 22:37]--[2017-02-09 周四 22:52] =>  0:15
+   :END:
+** TODO [#A] 深度探索 C++对象模型[14%]
+   - [X] 关于对象
+   - [ ] 构造函数语意学
+   - [ ] Data 语意学
+   - [ ] Function 语意学
+   - [ ] 构造，析构，拷贝语意学
+   - [ ] 运行期语意学
+   - [ ] 站在对象模型的尖端
+   :LOGBOOK:
+   CLOCK: [2017-02-19 周日 17:29]--[2017-02-19 周日 17:53] =>  0:24
+   CLOCK: [2017-02-18 周六 18:33]--[2017-02-18 周六 18:50] =>  0:17
+   CLOCK: [2017-02-18 周六 17:31]--[2017-02-18 周六 18:18] =>  0:47
+   :END:
+** TODO [#A] C++标准库[21%]
+   - [X] 关于本书
+   - [X] C++及标准库简介
+   - [X] 语言新特性
+   - [X] 一般概念
+   - [ ] 通用工具
+   - [ ] 标准模版库
+   - [ ] STL 容器
+   - [ ] 细探 STL 容器成员
+   - [ ] STL 迭代器
+   - [ ] STL 函数对象及 Lambda
+   - [ ] STL 算法
+   - [ ] 特殊容器
+   - [ ] 字符串
+   - [ ] 正则表达式
+   - [ ] 以 Stream 完成 I/O
+   - [ ] 国际化
+   - [ ] 数值
+   - [ ] 并发
+   - [ ] 分配器
+   :LOGBOOK:
+   CLOCK: [2017-02-23 周四 19:39]--[2017-02-23 周四 20:11] =>  0:32
+   CLOCK: [2017-02-23 周四 17:26]--[2017-02-23 周四 19:25] =>  1:59
+   CLOCK: [2017-02-20 周一 20:53]--[2017-02-20 周一 21:48] =>  0:55
+   CLOCK: [2017-02-20 周一 20:00]--[2017-02-20 周一 20:42] =>  0:42
+   CLOCK: [2017-02-19 周日 18:28]--[2017-02-19 周日 19:25] =>  0:57
+   :END:
+** TODO [#B] 代码大全 2[5%]
+   - [X] 欢迎进入软件构建的世界
+   - [X] 用隐喻来更充分地理解软件开发
+   - [ ] 三思而后行
+   - [ ] 关键的“构建”决策
+   - [ ] 软件构建中的设计
+   - [ ] 可以工作的类
+   - [ ] 高质量的子程序
+   - [ ] 防御式编程
+   - [ ] 伪代码编写过程
+   - [ ] 使用变量的一般事项
+   - [ ] 变量名的力量
+   - [ ] 基本数据类型
+   - [ ] 不常见的数据类型
+   - [ ] 组织直线型代码
+   - [ ] 使用条件语句
+   - [ ] 控制循环
+   - [ ] 不常见的控制结构
+   - [ ] 表驱动法
+   - [ ] 一般控制问题
+   - [ ] 软件质量概述
+   - [ ] 协同构建
+   - [ ] 开发者测试
+   - [ ] 调试
+   - [ ] 重构
+   - [ ] 代码调整策略
+   - [ ] 代码调整技术
+   - [ ] 程序规模对构建的影响
+   - [ ] 管理构建
+   - [ ] 集成
+   - [ ] 编程工具
+   - [ ] 布局与风格
+   - [ ] 自说明代码
+   - [ ] 个人性格
+   - [ ] 软件工艺的话题
+   - [ ] 何处有更多信息
+   :LOGBOOK:
+   CLOCK: [2017-02-19 周日 22:02]--[2017-02-19 周日 22:27] =>  0:25
+   CLOCK: [2017-02-19 周日 21:51]--[2017-02-19 周日 22:02] =>  0:11
+   :END:
+** TODO [#C] C++模板元编程[8%]
+   - [X] 概论
+   - [ ] Traits 和类型操纵
+   - [ ] 深入探索元函数
+   - [ ] 整型外覆器和操作
+   - [ ] 序列与迭代器
+   - [ ] 算法
+   - [ ] 视图与迭代适配器
+   - [ ] 诊断
+   - [ ] 跨越编译期和运行边界
+   - [ ] 领域特定的嵌入式语言
+   - [ ] DSEL 设计演练
+   - [ ] 附录
+   :LOGBOOK:
+   CLOCK: [2017-02-23 周四 20:22]--[2017-02-23 周四 20:37] =>  0:15
+   :END:
+** TODO [#B] 面向对象分析与设计[0%]
+   - [ ] 复杂性
+   - [ ] 对象模型
+   - [ ] 类与对象
+   - [ ] 分类
+   - [ ] 表示法
+   - [ ] 过程
+   - [ ] 实战
+   - [ ] 系统架构--基于卫星的导航
+   - [ ] 控制系统--交通管理
+   - [ ] 人工智能--密码分析
+   - [ ] 数据采集--气象监测站
+   - [ ] Web 应用--休假跟踪系统
+   - [ ] 附录
+   :LOGBOOK:
+   CLOCK: [2017-02-20 周一 14:00]--[2017-02-20 周一 14:45] =>  0:45
+   :END:
+** TODO [#B] 计算机体系结构--量化研究方法[0%]
+   - [ ] 量化设计与分析基础
+   - [ ] 存储器层次结构设计
+   - [ ] 指令级并行及其开发
+   - [ ] 向量,SIMD,和 GPU 体系结构中的数据级并行
+   - [ ] 线程级并行
+   - [ ] 指令集基本原理
+   - [ ] 存储器层次结构回顾
+   - [ ] 流水线：基础与中级概念
+   :LOGBOOK:
+   :END:
+** TODO [#B] Effective STL[0%]
+   - [ ] 容器
+   - [ ] vector 和 string
+   - [ ] 关系容器
+   - [ ] 迭代器
+   - [ ] 算法
+   - [ ] 函数子，函数子类，函数及其他
+   - [ ] 在程序中使用 STL
+   - [ ] 附录
+   :LOGBOOK:
+   :END:
+** TODO [#C] C++设计新思维[0%]
+   - [ ] 基于 Policy 的 Class 设计
+   - [ ] 技术
+   - [ ] Typelists
+   - [ ] 小型对象分配技术
+   - [ ] 泛化仿函数
+   - [ ] Singletons 实作技术
+   - [ ] 智能指针
+   - [ ] 对象工厂
+   - [ ] 抽象工厂
+   - [ ] Visitor
+   - [ ] Multimethods
+   - [ ] 附录
+   :LOGBOOK:
+   :END:
+** TODO [#B] 垃圾回收的算法和实现[0%]
+   - [ ] 学习 GC 之前
+   - [ ] GC 标记-清除算法
+   - [ ] 引用计数法
+   - [ ] GC 复制算法
+   - [ ] GC 标记-压缩算法
+   - [ ] 保守式 GC
+   - [ ] 分代垃圾回收
+   - [ ] 增量式垃圾回收
+   - [ ] RC Immix 算法
+   - [ ] Python 的垃圾回收
+   - [ ] DalvikVM 的垃圾回收
+   - [ ] Rubinius 的垃圾回收
+   - [ ] V8 的垃圾回收
+   - [ ] 附录
+   :LOGBOOK:
+   :END:
+** TODO [#C] 垃圾回收算法手册[%]
+** TODO [#B] 程序设计语言--实践之路[%]
+   - [ ] 引言
+   - [ ] 程序设计语言的语法
+   - [ ] 名字,作用域和约束
+   - [ ] 语义分析
+   - [ ] 目标机体系结构
+   - [ ] 控制流
+   - [ ] 数据类型
+   - [ ] 子程序和控制抽象
+   - [ ] 数据抽象和面向对象
+   - [ ] 函数式语言
+   - [ ] 逻辑式语言
+   - [ ] 并发
+   - [ ] 脚本语言
+   - [ ] 构造可运行的程序
+   - [ ] 运行时程序管理
+   - [ ] 代码改进
+   :LOGBOOK:
+   :END:
+** TODO [#B] 编程原本[8%]
+   - [X] 基础
+   - [ ] 变换及其轨道
+   - [ ] 可结合运算
+   - [ ] 线性序
+   - [ ] 有序代数结构
+   - [ ] 迭代器
+   - [ ] 坐标系统
+   - [ ] 后继可变的坐标
+   - [ ] 拷贝
+   - [ ] 重整
+   - [ ] 划分和归并
+   - [ ] 复合对象
+   :LOGBOOK:
+   CLOCK: [2017-02-22 周三 21:34]--[2017-02-22 周三 21:52] =>  0:18
+   CLOCK: [2017-02-22 周三 20:47]--[2017-02-22 周三 21:29] =>  0:42
+   :END:
+** TODO [#A] 算法[0%]
+   - [ ] 基础
+   - [ ] 排序
+   - [ ] 查找
+   - [ ] 图
+   - [ ] 字符串
+   - [ ] 背景
+   :LOGBOOK:
+   CLOCK: [2017-02-24 周五 11:41]--[2017-02-24 周五 12:32] =>  0:51
+   CLOCK: [2017-02-23 周四 23:23]--[2017-02-24 周五 00:14] =>  0:51
+   :END:
+** TODO [#B] Effective STL[12%]
+   - [X] 容器
+   - [ ] vector 和 string
+   - [ ] 关联容器
+   - [ ] 迭代器
+   - [ ] 算法
+   - [ ] 函数子，函数子类，函数及其他
+   - [ ] 在程序中使用 STL
+   - [ ] 附录
+   :LOGBOOK:
+   CLOCK: [2017-02-24 周五 14:03]--[2017-02-24 周五 16:19] =>  2:16
+   :END:
+** TODO [#A] 泛型编程与 STL[0%]
+   - [ ] STL 巡礼
+   - [ ] 算法与区间
+   - [ ] 再论 Iterators
+   - [ ] 函数对象
+   - [ ] Containers
+   - [ ] 基本概念
+   - [ ] Iterators
+   - [ ] 函数对象
+   - [ ] 容器
+   - [ ] 基本组件
+   - [ ] 只读算法
+   - [ ] 写算法
+   - [ ] 排序和查找
+   - [ ] 迭代器类
+   - [ ] 函数对象类
+   - [ ] 容器类
+   - [ ] 附录 A
+   :LOGBOOK:
+   CLOCK: [2017-02-25 周六 16:27]--[2017-02-25 周六 16:54] =>  0:27
+   :END:
+** TODO [#A] 第一行代码[6%]
+   - [X] 开始启程
+   - [ ] 探究活动
+   - [ ] UI 开发
+   - [ ] 探究碎片
+   - [ ] 广播机制
+   - [ ] 持久化技术
+   - [ ] 内容提供器
+   - [ ] 手机多媒体
+   - [ ] 使用网络技术
+   - [ ] 探究服务
+   - [ ] 基于位置的服务
+   - [ ] Matrial Design
+   - [ ] 继续进阶
+   - [ ] 开发酷欧天气
+   - [ ] 最后一步--将应用发布到 360 应用商店
+   :LOGBOOK:
+   CLOCK: [2017-02-26 周日 00:45]--[2017-02-26 周日 01:34] =>  0:49
+   CLOCK: [2017-02-25 周六 23:25]--[2017-02-25 周六 23:44] =>  0:19
+   :END:
+** TODO [#B] STL 源码剖析[0%]
+   - [ ] STL 概论与版本简介
+   - [ ] allocator
+   - [ ] iterators 概念与 traits 编程技法
+   - [ ] 序列式容器
+   - [ ] 关联式容器
+   - [ ] 算法
+   - [ ] 仿函数
+   - [ ] adapters
+   - [ ] 附录
+   :LOGBOOK:
+   CLOCK: [2017-02-25 周六 23:45]--[2017-02-26 周日 00:38] =>  0:53
+   :END:
 * Homework
 * Things
 ** TODO Blog
-** TODO Learn OpenGL 
-   :LOGBOOK:
-   CLOCK: [2017-02-06 周一 20:07]--[2017-02-06 周一 20:33] =>  0:26
-   CLOCK: [2017-02-05 周日 23:07]--[2017-02-05 周日 23:58] =>  0:51
-   CLOCK: [2017-02-05 周日 22:22]--[2017-02-05 周日 22:32] =>  0:10
-   CLOCK: [2017-02-04 周六 20:31]--[2017-02-04 周六 21:07] =>  0:36
-   CLOCK: [2017-02-04 周六 19:43]--[2017-02-04 周六 20:22] =>  0:39
-   CLOCK: [2017-02-04 周六 18:33]--[2017-02-04 周六 19:14] =>  0:41
-   CLOCK: [2017-02-04 周六 17:37]--[2017-02-04 周六 18:04] =>  0:27
-   CLOCK: [2017-02-03 周五 14:50]--[2017-02-03 周五 16:15] =>  1:25
-   CLOCK: [2017-02-03 周五 11:18]--[2017-02-03 周五 13:08] =>  1:50
-   CLOCK: [2017-02-02 周四 10:25]--[2017-02-02 周四 11:19] =>  0:54
-   CLOCK: [2017-02-02 周四 09:23]--[2017-02-02 周四 09:58] =>  0:35
-   CLOCK: [2017-02-01 周三 15:34]--[2017-02-01 周三 15:56] =>  0:22
-   CLOCK: [2017-02-01 周三 14:17]--[2017-02-01 周三 14:42] =>  0:25
-   CLOCK: [2017-01-31 周二 14:08]--[2017-01-31 周二 14:17] =>  0:09
-   CLOCK: [2017-01-31 周二 12:14]--[2017-01-31 周二 14:02] =>  1:48
-   CLOCK: [2017-01-31 周二 11:06]--[2017-01-31 周二 12:05] =>  0:59
-   :END:
 * Daily                                                             :@daily:
-** TODO 练习双拼和英文打字
-
-
