--- a/tasks.org
+++ b/tasks.org
@@ -4,12 +4,12 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-02-26 周日 00:57]
+#+CAPTION: Clock summary at [2017-03-08 周三 22:09]
 | Headline                                   | Time       |         |
 |--------------------------------------------+------------+---------|
-| *Total time*                               | *3d 11:10* |         |
+| *Total time*                               | *3d 19:17* |         |
 |--------------------------------------------+------------+---------|
-| BOOK                                       | 3d 11:10   |         |
+| BOOK                                       | 3d 19:17   |         |
 | \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
 | \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
 | \_  TODO [#A] 数据库系统概念[16%]          |            |    4:49 |
@@ -22,18 +22,18 @@
 | \_  TODO [#C] Windows 程序设计             |            |    1:22 |
 | \_  TODO [#B] 面向对象的游戏开发[27%]      |            |    2:37 |
 | \_  TODO [#A] C++语言的设计及演化          |            |    2:01 |
-| \_  TODO [#A] C++ Templates[70%]           |            |   11:21 |
 | \_  TODO [#A] 深度探索 C++对象模型[14%]    |            |    1:28 |
-| \_  TODO [#A] C++标准库[21%]               |            |    5:05 |
+| \_  TODO [#A] C++标准库[21%]               |            |    5:33 |
 | \_  TODO [#B] 代码大全 2[5%]               |            |    0:36 |
-| \_  TODO [#C] C++模板元编程[8%]            |            |    0:15 |
+| \_  WAIT [#C] C++模板元编程[58%]           |            |    9:13 |
 | \_  TODO [#B] 面向对象分析与设计[0%]       |            |    0:45 |
+| \_  TODO [#B] Effective STL[100%]          |            |    7:37 |
 | \_  TODO [#B] 编程原本[8%]                 |            |    1:00 |
 | \_  TODO [#A] 算法[0%]                     |            |    1:42 |
-| \_  TODO [#B] Effective STL[12%]           |            |    2:16 |
+| \_  TODO [#B] Effective STL[50%]           |            |    3:07 |
 | \_  TODO [#A] 泛型编程与 STL[0%]           |            |    0:27 |
-| \_  TODO [#A] 第一行代码[0%]               |            |    0:19 |
-| \_  TODO [#B] STL 源码剖析[0%]             |            |    0:53 |
+| \_  TODO [#A] 第一行代码[6%]               |            |    1:08 |
+| \_  TODO [#B] STL 源码剖析[11%]            |            |    1:38 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#A] CLRS
@@ -338,51 +338,6 @@
    CLOCK: [2017-02-09 周四 10:49]--[2017-02-09 周四 11:49] =>  1:00
    CLOCK: [2017-02-09 周四 09:40]--[2017-02-09 周四 10:28] =>  0:48
    :END:
-** TODO [#A] C++ Templates[70%] 
-   - [X] 关于本章
-   - [X] 函数模版
-   - [X] 类模版
-   - [X] 非类型 模版参数
-   - [X] 技巧性基础知识
-   - [X] 模版实战
-   - [X] 模版术语
-   - [X] 深入模版基础
-   - [X] 模版中的名称
-   - [X] 实例化
-   - [X] 模板实参演绎
-   - [X] 特化与重载
-   - [X] 未来的方向
-   - [X] 模版的多态威力
-   - [X] trait 与 policy 类
-   - [X] 模版与继承
-   - [X] mateprogram
-   - [ ] 表示式模板
-   - [ ] 类型区分
-   - [ ] 智能指针
-   - [ ] tuple
-   - [ ] 函数对象和回调
-   - [ ] 一处定义原则
-   - [ ] 重载解析
-   :LOGBOOK:
-   CLOCK: [2017-02-23 周四 11:14]--[2017-02-23 周四 12:15] =>  1:01
-   CLOCK: [2017-02-23 周四 10:36]--[2017-02-23 周四 11:01] =>  0:25
-   CLOCK: [2017-02-22 周三 17:46]--[2017-02-22 周三 18:16] =>  0:30
-   CLOCK: [2017-02-22 周三 16:53]--[2017-02-22 周三 17:36] =>  0:43
-   CLOCK: [2017-02-22 周三 16:22]--[2017-02-22 周三 16:47] =>  0:25
-   CLOCK: [2017-02-22 周三 01:50]--[2017-02-22 周三 01:58] =>  0:08
-   CLOCK: [2017-02-22 周三 01:31]--[2017-02-22 周三 01:50] =>  0:19
-   CLOCK: [2017-02-21 周二 21:45]--[2017-02-21 周二 22:50] =>  1:05
-   CLOCK: [2017-02-21 周二 18:19]--[2017-02-21 周二 19:02] =>  0:43
-   CLOCK: [2017-02-21 周二 17:22]--[2017-02-21 周二 18:08] =>  0:46
-   CLOCK: [2017-02-21 周二 17:17]--[2017-02-21 周二 17:21] =>  0:04
-   CLOCK: [2017-02-21 周二 16:13]--[2017-02-21 周二 17:00] =>  0:47
-   CLOCK: [2017-02-20 周一 22:02]--[2017-02-20 周一 22:44] =>  0:42
-   CLOCK: [2017-02-19 周日 22:43]--[2017-02-19 周日 23:44] =>  1:01
-   CLOCK: [2017-02-11 周六 20:19]--[2017-02-11 周六 21:50] =>  1:31
-   CLOCK: [2017-02-10 周五 12:17]--[2017-02-10 周五 12:30] =>  0:13
-   CLOCK: [2017-02-10 周五 11:20]--[2017-02-10 周五 12:03] =>  0:43
-   CLOCK: [2017-02-09 周四 22:37]--[2017-02-09 周四 22:52] =>  0:15
-   :END:
 ** TODO [#A] 深度探索 C++对象模型[14%]
    - [X] 关于对象
    - [ ] 构造函数语意学
@@ -417,6 +372,7 @@
    - [ ] 并发
    - [ ] 分配器
    :LOGBOOK:
+   CLOCK: [2017-03-08 周三 11:38]--[2017-03-08 周三 12:06] =>  0:28
    CLOCK: [2017-02-23 周四 19:39]--[2017-02-23 周四 20:11] =>  0:32
    CLOCK: [2017-02-23 周四 17:26]--[2017-02-23 周四 19:25] =>  1:59
    CLOCK: [2017-02-20 周一 20:53]--[2017-02-20 周一 21:48] =>  0:55
@@ -463,20 +419,35 @@
    CLOCK: [2017-02-19 周日 22:02]--[2017-02-19 周日 22:27] =>  0:25
    CLOCK: [2017-02-19 周日 21:51]--[2017-02-19 周日 22:02] =>  0:11
    :END:
-** TODO [#C] C++模板元编程[8%]
+** WAIT [#C] C++模板元编程[58%]
+   - State "WAIT"       from "TODO"       [2017-03-04 周六 16:59] \\
+     it's not the right time to read it;
    - [X] 概论
-   - [ ] Traits 和类型操纵
-   - [ ] 深入探索元函数
-   - [ ] 整型外覆器和操作
-   - [ ] 序列与迭代器
-   - [ ] 算法
-   - [ ] 视图与迭代适配器
+   - [X] Traits 和类型操纵
+   - [X] 深入探索元函数
+   - [X] 整型外覆器和操作
+   - [X] 序列与迭代器
+   - [X] 算法
+   - [X] 视图与迭代适配器
    - [ ] 诊断
    - [ ] 跨越编译期和运行边界
    - [ ] 领域特定的嵌入式语言
    - [ ] DSEL 设计演练
    - [ ] 附录
    :LOGBOOK:
+   CLOCK: [2017-03-04 周六 16:47]--[2017-03-04 周六 16:58] =>  0:11
+   CLOCK: [2017-03-03 周五 23:11]--[2017-03-03 周五 23:15] =>  0:04
+   CLOCK: [2017-03-03 周五 20:10]--[2017-03-03 周五 20:48] =>  0:38
+   CLOCK: [2017-03-03 周五 10:03]--[2017-03-03 周五 11:05] =>  1:02
+   CLOCK: [2017-03-02 周四 22:28]--[2017-03-02 周四 23:00] =>  0:32
+   CLOCK: [2017-03-02 周四 20:50]--[2017-03-02 周四 22:18] =>  1:28
+   CLOCK: [2017-03-02 周四 18:48]--[2017-03-02 周四 19:27] =>  0:39
+   CLOCK: [2017-03-02 周四 17:10]--[2017-03-02 周四 18:12] =>  1:02
+   CLOCK: [2017-03-02 周四 15:31]--[2017-03-02 周四 15:59] =>  0:28
+   CLOCK: [2017-03-01 周三 23:33]--[2017-03-01 周三 23:39] =>  0:06
+   CLOCK: [2017-03-01 周三 20:26]--[2017-03-01 周三 21:44] =>  1:18
+   CLOCK: [2017-03-01 周三 16:49]--[2017-03-01 周三 17:31] =>  0:42
+   CLOCK: [2017-03-01 周三 15:15]--[2017-03-01 周三 16:03] =>  0:48
    CLOCK: [2017-02-23 周四 20:22]--[2017-02-23 周四 20:37] =>  0:15
    :END:
 ** TODO [#B] 面向对象分析与设计[0%]
@@ -505,17 +476,6 @@
    - [ ] 指令集基本原理
    - [ ] 存储器层次结构回顾
    - [ ] 流水线：基础与中级概念
-   :LOGBOOK:
-   :END:
-** TODO [#B] Effective STL[0%]
-   - [ ] 容器
-   - [ ] vector 和 string
-   - [ ] 关系容器
-   - [ ] 迭代器
-   - [ ] 算法
-   - [ ] 函数子，函数子类，函数及其他
-   - [ ] 在程序中使用 STL
-   - [ ] 附录
    :LOGBOOK:
    :END:
 ** TODO [#C] C++设计新思维[0%]
@@ -598,18 +558,6 @@
    CLOCK: [2017-02-24 周五 11:41]--[2017-02-24 周五 12:32] =>  0:51
    CLOCK: [2017-02-23 周四 23:23]--[2017-02-24 周五 00:14] =>  0:51
    :END:
-** TODO [#B] Effective STL[12%]
-   - [X] 容器
-   - [ ] vector 和 string
-   - [ ] 关联容器
-   - [ ] 迭代器
-   - [ ] 算法
-   - [ ] 函数子，函数子类，函数及其他
-   - [ ] 在程序中使用 STL
-   - [ ] 附录
-   :LOGBOOK:
-   CLOCK: [2017-02-24 周五 14:03]--[2017-02-24 周五 16:19] =>  2:16
-   :END:
 ** TODO [#A] 泛型编程与 STL[0%]
    - [ ] STL 巡礼
    - [ ] 算法与区间
@@ -651,8 +599,8 @@
    CLOCK: [2017-02-26 周日 00:45]--[2017-02-26 周日 01:34] =>  0:49
    CLOCK: [2017-02-25 周六 23:25]--[2017-02-25 周六 23:44] =>  0:19
    :END:
-** TODO [#B] STL 源码剖析[0%]
-   - [ ] STL 概论与版本简介
+** TODO [#B] STL 源码剖析[11%]
+   - [X] STL 概论与版本简介
    - [ ] allocator
    - [ ] iterators 概念与 traits 编程技法
    - [ ] 序列式容器
@@ -662,7 +610,69 @@
    - [ ] adapters
    - [ ] 附录
    :LOGBOOK:
+   CLOCK: [2017-03-09 周四 20:50]--[2017-03-09 周四 21:51] =>  1:01
+   CLOCK: [2017-03-01 周三 14:57]--[2017-03-01 周三 15:07] =>  0:10
+   CLOCK: [2017-02-28 周二 22:31]--[2017-02-28 周二 22:41] =>  0:10
+   CLOCK: [2017-02-28 周二 21:58]--[2017-02-28 周二 22:23] =>  0:25
    CLOCK: [2017-02-25 周六 23:45]--[2017-02-26 周日 00:38] =>  0:53
+   :END:
+** TODO [#A] Effective C++[33%]
+   - [X] 让自己习惯 C++
+   - [X] 析构/析构/赋值运算
+   - [X] 资源管理
+   - [ ] 设计与声明
+   - [ ] 实现
+   - [ ] 继承与面向对象设计
+   - [ ] 模版与泛型编程
+   - [ ] 定制 new 和 delete
+   - [ ] 杂项讨论
+   :LOGBOOK:
+   CLOCK: [2017-03-10 周五 19:35]--[2017-03-10 周五 21:35] =>  2:00
+   CLOCK: [2017-03-09 周四 17:09]--[2017-03-09 周四 17:50] =>  0:41
+   CLOCK: [2017-03-08 周三 23:33]--[2017-03-08 周三 23:40] =>  0:07
+   :END:
+** TODO [#A] Linux 多线程服务端编程[18%]
+   - [ ] 线程安全的对象生命期管理
+   - [ ] 线程同步精要
+   - [ ] 多线程服务器的适用场合与常用编程模型
+   - [ ] C++多线程系统编程精要
+   - [ ] 高效的多线程日志
+   - [ ] muduo 网络库简介
+   - [ ] muduo 编程示范
+   - [ ] muduo 网络库设计与实现
+   - [ ] 分布式系统工程实践
+   - [ ] C++编译链接模型精要
+   - [ ] 反思 C++面向对象与虚函数
+   - [ ] C++经验谈
+   - [X] 谈一谈网络编程学习经验
+   - [X] 入手学习 C++
+   - [X] 关于 boost
+   - [ ] 关于 TCP 并发连接的几个思考题与实验
+   :LOGBOOK:
+   CLOCK: [2017-03-10 周五 20:39]--[2017-03-10 周五 21:35] =>  0:56
+   :END:
+** TODO [#A] TCP/IP 详解[0%]p.6
+   - [ ] Introduction
+   - [ ] The Internet Address Architecture
+   - [ ] Link Layer
+   - [ ] ARP
+   - [ ] IP
+   - [ ] System Configuration:DHCP and Autoconfiguration
+   - [ ] Firewalls and NAT
+   - [ ] ICMPv4 ICMPv6
+   - [ ] IGMP and MLD
+   - [ ] UDP and IP Fragmentation
+   - [ ] Name Resolution and the Domain Name System
+   - [ ] TCP
+   - [ ] TCP Connection Management
+   - [ ] TCP Timeout and Retransmission
+   - [ ] TCP Data Flow and Window Management
+   - [ ] TCP Congestion Control
+   - [ ] TCP Keepalive
+   - [ ] Security
+   :LOGBOOK:
+   CLOCK: [2017-03-11 周六 14:34]--[2017-03-11 周六 15:10] =>  0:36
+   CLOCK: [2017-03-11 周六 12:45]--[2017-03-11 周六 13:10] =>  0:25
    :END:
 * Homework
 * Things
